# group-ARD

./: .gitignore  README.md  example.py  groupard.py  model.py  pyproject.toml  skl_example.py  skl_example_complete.py
src/groupard/: __init__.py  groupard.py
tests/: test_groupard.py
