[project]
name = "group-ard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
]
