[project]
name = "group-ard"
version = "0.1.0"
description = "Scikit-learn compatible implementation of Group Automatic Relevance Determination (GroupARD) regression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groupard"]
